// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multi point mode in linear elements arrow 1`] = `
Object {
  "angle": 0,
  "backgroundColor": "transparent",
  "fillStyle": "hachure",
  "height": 110,
  "id": "id0",
  "isDeleted": false,
  "lastCommittedPoint": Array [
    70,
    110,
  ],
  "opacity": 100,
  "points": Array [
    Array [
      0,
      0,
    ],
    Array [
      20,
      30,
    ],
    Array [
      70,
      110,
    ],
  ],
  "roughness": 1,
  "seed": 337897,
  "strokeColor": "#000000",
  "strokeWidth": 1,
  "type": "arrow",
  "version": 7,
  "versionNonce": 1116226695,
  "width": 70,
  "x": 30,
  "y": 30,
}
`;

exports[`multi point mode in linear elements line 1`] = `
Object {
  "angle": 0,
  "backgroundColor": "transparent",
  "fillStyle": "hachure",
  "height": 110,
  "id": "id0",
  "isDeleted": false,
  "lastCommittedPoint": Array [
    70,
    110,
  ],
  "opacity": 100,
  "points": Array [
    Array [
      0,
      0,
    ],
    Array [
      20,
      30,
    ],
    Array [
      70,
      110,
    ],
  ],
  "roughness": 1,
  "seed": 337897,
  "strokeColor": "#000000",
  "strokeWidth": 1,
  "type": "line",
  "version": 7,
  "versionNonce": 1116226695,
  "width": 70,
  "x": 30,
  "y": 30,
}
`;
